src/objects/Consulta_Cifin__c.object
<CustomObject>
    <fields>
        <fullName>Cifin__c</fullName>
        <label>Cifin</label>
        <referenceTo>Cifin__c</referenceTo>
        <relationshipLabel>Consultas Cifin</relationshipLabel>
        <relationshipName>Consultas_Cifin</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad__c</fullName>
        <label>Entidad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sucursal__c</fullName>
        <label>Sucursal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>